ci: run tests with matrix java toolchains